k8s-http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
namespace: 3-tier-ns
  name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000
